Final CORS fix for Railway deployment